kustomization/overlays/prod/factorio-relic/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure,websecure-ext
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forwardauth-authelia-middleware@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: factorio-ingress
spec:
  rules:
    - host: factorio-relic-admin.tswn.us
      http:
        paths:
          - backend:
              service:
                name: factorio-admin-svc
                port:
                  name: web
            path: /
            pathType: Prefix
